Update Metrics.java
integer constructor deprecation fix